@@ -2,6 +2,8 @@
 
     * Distinguising session name and windwo title. Storing window 
       separately from session name in session.
+      
+    * Added support to terminate a session via Applescript.
 
 2003-05-01	fabian
     * removed scrollback settings in UI for performance reasons.
